# online_dictionary

./: CMakeLists.txt  README.md
client/include/: client.h
client/src/: client.c  clientmain.c
server/include/: server.h
server/src/: server.c  servermain.c
