CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
PROJECT(online-dictionary)
LINK_LIBRARIES(sqlite3)
INCLUDE_DIRECTORIES(client/include)
AUX_SOURCE_DIRECTORY(client/src CLIENT_SOURCE_DIR)
SET(EXECUTABLE_OUTPUT_PATH bin)
ADD_EXECUTABLE(clientmain ${CLIENT_SOURCE_DIR})
SET(CMAKE_BUILD_TYPE "Debug")
LINK_DIRECTORIES(/usr/lib /usr/local/lib)
AUX_SOURCE_DIRECTORY(server/src SERVER_SOURCE_DIR)
INCLUDE_DIRECTORIES(server/include)
ADD_EXECUTABLE(servermain ${SERVER_SOURCE_DIR})
